src/test/deca/syntax/parser/invalid/test/test_pars_inv_println_oubli_parenthese.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le println
//
// Resultats:
//    Ligne 12 : Erreur (oubli ")")
//    
//
// Historique:
//    cree le 04/01/2023

{
    println('Hello';
}
